# Computer-Graphics-Phase-3

./: README.md
CG_TP/: CMakeLists.txt  Makefile  box.3d  cone.3d  config.xml  cylinder.3d  extractor.cpp  generator  generator.cpp  main.cpp  parser.cpp  sphere.3d
CG_TP/headers/: extractor.h  parser.h
